<resources>
    <string name="app_name">Coffee shop</string>
    <string name="home">HOME</string>
    <string name="coffee">COFFEE</string>
    <string name="card">CARD</string>
    <string name="account">ACCOUNT</string>
    <string name="dollar">рублей</string>

    <string name="clearCard">CLEAR CARD</string>
    <string name="clearOrders">Очистить выбор</string>
    <string name="checkout">Сделать заказ</string>
    <string name="totalOrder">ИТОГО ваш заказ:</string>
    <string name="yourName">Ваше имя</string>
    <string name="yourPhone">Ваш телефон</string>
    <string name="submit">Подтвердить заказ</string>
    <string name="mainHeader">COSO - MOBILE COFFEE SHOP</string>
    <string name="descriptionCoso">We are happy to make coffee for you and make your day a little better</string>
    <string name="salePropOne">Sale - 10 % </string>
    <string name="salePropTwo">Sale - 15 % </string>
    <string name="headerPropOne">Morning moccaccino</string>
    <string name="headerPropTwo">Morning cappuccino</string>
    <string name="descriptionProposal">The promotion is valid when ordering from 8 to 10 am</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>