<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.tabs.card.Card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearCard"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/orange"
            android:text="@string/clearCard"
            android:textColor="@color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listCard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clearCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/headerTotalOrder"
            app:layout_constraintRight_toLeftOf="@id/totalOrder"
            app:layout_constraintTop_toBottomOf="@id/listCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/totalOrder"
            android:textColor="@color/orange" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalOrder"
            app:layout_constraintRight_toLeftOf="@id/currTotalOrder"
            app:layout_constraintTop_toBottomOf="@id/listCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/orange" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/currTotalOrder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/listCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/dollar"
            android:textColor="@color/orange" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkoutCard"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:background="@color/orange"
            android:text="@string/checkout"
            android:textColor="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>