<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.tabs.Checkout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEnterNameCheckout"
            app:boxBackgroundColor="@android:color/black"
            app:boxStrokeColor="@android:color/black"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/holo_red_light"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconTint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/yourName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterNameCheckout"
                app:backgroundTint="@android:color/holo_orange_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColor="@android:color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEnterPhoneCheckout"
            app:boxBackgroundColor="@android:color/black"
            app:boxStrokeColor="@android:color/black"
            app:boxStrokeWidthFocused="4dp"
            app:endIconMode="clear_text"
            app:endIconTint="@android:color/holo_red_light"
            app:hintTextColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/layoutEnterNameCheckout"
            app:startIconTint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/yourPhone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enterPhoneCheckout"
                app:backgroundTint="@android:color/holo_orange_dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submitCheckout"
            app:layout_constraintTop_toBottomOf="@id/layoutEnterPhoneCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/orange"
            android:text="@string/submit"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/res"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submitCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>